# freq-utility

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindLibAIO.cmake  GoogleBenchmark.cmake  GoogleTest.cmake
freq_benchmarks/: CMakeLists.txt  FreqBenchmarks.cpp  generate_file.py
freq_tests/: CMakeLists.txt  FreqTests.cpp
libs/: threadpool.h
src/: freq.cpp  freq.h  main.cpp  utils.h
src/dummy/: freq_dummy.cpp  freq_dummy.h
test_cases/: generate_tests.py
